update: replace app icons and update background color in launcher , change notification icon , add videos text in videos screen , add navigation when press on news bar , chnage home resources , refactor home screen

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="bg">#1E682F</color>
-    <color name="green">#006a31</color>
+<color name="bg">#2D4A96</color>
+    <color name="green">#2D4A96</color>
 </resources>
